@@ -4,7 +4,8 @@ Stable versions
 4.3.1 ():
 	- fix STM empty note event read
 	- fix ABK loader test in Win32
-	- fix invalid memory access in XM event reader
+	- fix XM invalid memory access in event reader
+	- fix ST2.6 speed effect (reported by Saga Musix)
 	- refactor depacking code
 	- code cleanup
 
